# report-reader

./: .dockerignore  .gitignore  README.md  go.mod  main.go  pyproject.toml
.cursor/rules/: coding-guidelines.mdc
app/: main.py  settings.py
app/theme/: phycat.css
docker/: Dockerfile  docker-compose.yaml  start.sh
docker/nginx/: raeder.conf
internal/config/: config.go
internal/fetcher/: fetcher.go
internal/renderer/: renderer.go
static/: phycat.css
templates/: document.html  form.html
