[project]
name = "report-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.36.2",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.2",
]
