[project]
name = "report-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.49.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.11.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.2",
]
